--- a/app.css
+++ b/app.css
@@ -1,7 +1,81 @@
-body {
-    margin-top: 200px;
-    margin-left: 200px;
-    margin-bottom: 200px;
-    max-width: 70%;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto Mono', monospace;
+    background: #2c3e50;
+    color: #ecf0f1;
+}
+h1 {
+    font-size: 50px;
+    text-align: center;
+    margin-top: 20px;
+    color: #ecf0f1;
+}
+header{
+background: #34495e;
+color: #ecf0f1;
+padding: 20px;  
+text-align: center;
+font-size: 24px;
+}
+
+.navbar {
+    display: flex;
+
+    align-items: center;
+    padding: 10px 20px;
+    gap: 50px;
+}
+
+ul li a {
+   
+    text-decoration: none;
+    color: #ecf0f1;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    font-size: 18px;
+    font-weight: bold;
+    background: #d35400;
+    list-style: none;
+    border-radius: 10px;
+}
+
+ul li a:hover {
+    background: #e67e22;
+    color: #ecf0f1;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
+ul li {
+    list-style-type: none;
+}
+
+article  {
+    text-align: center;
+  margin: 20px;
+    color: #ffffff;
+    font-family:  "Roboto Mono", monospace;
+    font-size: 25px;
+}
+
+.formore {
+    text-align: center;
+    margin: 20px;
+    color: #ffffff;
+    font-family:  "Roboto Mono", monospace;
+    font-size: 15px;
+    padding: 20px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.formore:hover {
+    background: #d35400;
+    color: #ecf0f1;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
 }
